修改程序图标

--- a/Install4ibas/MainForm.resx
+++ b/Install4ibas/MainForm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AACkbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/oGwB/6lzAP+kbgP/pGkC/6FvAP+gbAj/rW0A/6VvAP+jcQH/nG0E/6lvAP+kbgD/m3MA/5hm
+        Bv+gdAn/p24A/6BuBP+sbgL/kmkG/55yAP+gcAb/p28A/6h0AP+XbQL/pm0E/6dsCf+iawP/oHEA/6dv
+        Cv+mbAL/qXEG/6ZuAP+ocAD/nm4A/59tAP+sfAD/nHAA/6BvA/+tbAn/p3QA/6xrAP+jcQD/pm8H/6hz
+        AP+dbwP/rm4C/6xoAP+odAD/nHAA/6trAP+0cgH/oHIC/51pBP+qcAD/pmwA/6lwB/+dbwD/oWwA/6Vz
+        AP+ndQD/pG0A/6FtA/+acAD/mXUA/59wAP+nagj/v5po/7KSV/+ebwP/n2wE/6BwCv+acQD/pXAB/51w
+        Af+2lWT/t5RQ/5xtAf+qcgX/rmwG/5x6J/+7oGD/q4hI/6luAP+gdAH/oWoB/7aJRf+7nWb/p3Up/6Ry
+        AP+lbQD/o28F/6ZuAP+ibwH/qYZG/7+XYv+4fCr/mHIA/6ZoBP//8+r///v//659If+qawD/pm8A/6Nv
+        BP+dbgL/x6d2///7///lzr7/pnQC/5RoAP+jcAL/1tCj////9//r6OD/l24H/59uAP+pbgD/161+//3/
+        /P/fyq7/m3IA/6JxBf+jbgD/sWgA/551CP/m593////y/6+IOv+hcwD/oXEB/8e3kv/0////1bmW/6px
+        AP+lcAD/nnAE/6VvAP/n2sz/+f3//7eQUv+dbAD/qXMI/6FqB//8+Pf//f/8//37//+6lFT/n2sB/7B0
+        A/+haAv/8/jv//j3+/+nawf/o28A/59uCv+qcgH/t41S//z9///m1sb/mm4D/6BrAP+pcAP/q3km////
+        /P/05NT/nGsF/5xyCP+qbAL/o3sp///+/v/q6OD/oXIA/6JuA/+obwD/2LN////0///VuqX///3//+LN
+        t/+UbwD/p28A/6hyAP/Tx6////3//8Kpd/+cbAD/qW4A/51zAP/cx6v/+v///8Wjf/+ebgX/om4D/69v
+        A/+jawD/2NG+//H///////v/9//////3//////f///r//8mvh/+ecAH/pm8A/55xAv/r59T////3/6d1
+        M//s49//+vr0/56FKf+ibgD/o3EA/6SGS////vf/9fr////8//////v///v///r+////7uL/qmwC/6Ft
+        Av+dcAH/oW0A/6l0Bv+4lEb///v+/+3v8P/TwJv/1cSj//j////y9/X/o3QA/59tA/+vbQT/u4xY///+
+        ///T07v/o3YA/8Ouk////fn/2baV/6BtAP+ocAH/n24A/+Lcxf////z/4c28/8jAqf/m5cn/+P7//8q1
+        mf+xcAD/nW8A/6pvAf+ocQD/oWsG/6Z0Av/s597/+/zz/6FqAf+vlVP/+//+/9/Irv+hawz/pnIA/6Jz
+        AP/g0rv//vz//8Kaaf+acgH/onkk//35/v/96Ov/n3EG/6FvAP+dcQD/0J95///6///VuJP/p28A/9jR
+        1P///f//rn4e/6FrBv+gcQD/oG4E/59tAP+fcQX/oG0A/8Gvhv/+/P//0LGE/+LNvv////z/sIs5/6Nu
+        AP+lcgD/p38m//v39v/97+n/nW8E/7duBv+jbgD/486y////+f+zm2H/pG4D/6xqAf+scwD/8/Xi///1
+        2/+xiT7///3//9rStf+dcQD/qHEA/6dsAP+ibwD/qnQA/6JwAP+ubwH/qHcp///59v/k4dP///nw/+Te
+        0f+cbwj/qG0J/6ppAP/Iqof/9vz//8+yk/+gcgP/oXIA/51zAP+6jlj////8/9vTvP+hdgD/pW8E/5Z0
+        AP/JvqL/9vz//9/Yx//7/v//taJl/5ttAf+dcQD/qHQA/51vA/+dcAD/nHUA/6FwAP+gcgb/1cqk//H/
+        /v/6//z/yK10/55zBv+XbQD/qHAA//Hn5//7/v//s401/5lxAP+kbwD/pXEA/5xoA///7+n///z//6V2
+        JP+mbAL/pXIE/6h+Hv////7/+vz///bm1v+hcQf/qm0A/59rAf+sagP/qGwC/6NrAP+mbgH/qnME/51o
+        Dv+ff0r////7//ru6v+taQD/pGoD/5ZzDP+9lUr///38/+zZvv+tcwL/qW0A/6FxAf+bbAD/mHAA/860
+        pP///v7/27qJ/6BtBf+abQD/pGsI/+POuP////T/y7KG/51rAP+jcAj/m2wD/6JzB/+fcQL/nXID/6Rv
+        AP+qbgD/qmsA/650AP+pagL/pHAA/6hxAP+mcQD/onIA/6BoA/+bcQf/nm8D/6FxAP+dbQ7/omsC/6pz
+        AP+rcwD/omoA/5R1AP+ZdQD/qm4A/6VzAf+rcwD/nGoG/5xvBv+SagT/p28A/6ZvB/+sbQD/o3AA/6Zs
+        Av+ibgT/oG4A/6pxAP+ecgD/n3UA/6ZsAv+dcAH/qG4F/6duAP+icgD/o3EH/6prAP+lbAP/qHIA/6Nt
+        AP+kagv/n28A/6RvDv+pbgD/n2wA/51vBP+kagP/oW8A/5lvAP+obwL/pm4A/6J1Bv+kbgP/lW4A/61w
+        Av+ccAD/pnMA/6BvAf+fcgD/qGcE/6FwAv+TaQb/rXEH/6VvAP+acAD/oHEI/59uAP+hcwD/rWwD/5lv
+        Bf+kcgD/o3EB/6hvAv+gdgD/mmwA/6lxAv+rbQP/p20E/6ZwAP+jbAT/oHEA/6NuAP+kcgL/o24A/7Js
+        Af+gdQD/rGgJ/6BvAf+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6RvAP+kbwD/pG8A/6Rv
+        AP+kbwD/pG8A/6RvAP+kbwD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
